--- a/app/src/main/res/layout/dialog_endcard_win_tip.xml
+++ b/app/src/main/res/layout/dialog_endcard_win_tip.xml
@@ -24,8 +24,9 @@
                 android:layout_gravity="center"
                 android:layout_marginRight="@dimen/margin_4"
                 android:textSize="@dimen/textSize18sp"
-                android:textColor="@color/color_BEC7DC"
-                android:text="@string/notice"/>
+                android:textColor="@color/color_FFFFFF"
+                android:textStyle="bold"
+                android:text="@string/KYC055"/>
 
         </LinearLayout>
         <View
@@ -38,8 +39,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_20"
             android:layout_marginHorizontal="@dimen/margin_12"
-            android:lineHeight="@dimen/margin_16"
-            android:textColor="@color/color_B1BAD3"
+            android:lineHeight="@dimen/margin_18"
+            android:textColor="@color/color_FFFFFF"
             android:textSize="@dimen/textSize14sp"
             android:text="@string/P348"/>
         <LinearLayout
