--- a/app/src/main/res/layout/fragment_endcardgame.xml
+++ b/app/src/main/res/layout/fragment_endcardgame.xml
@@ -131,7 +131,7 @@
                         android:gravity="center_vertical"
                         android:maxLines="1"
                         android:textColor="@color/white"
-                        android:textSize="13sp"
+                        android:textSize="@dimen/textSize14sp"
                         app:layout_constraintEnd_toStartOf="@+id/linSection"
                         app:layout_constraintStart_toEndOf="@+id/ivHomeLogo"
                         app:layout_constraintTop_toTopOf="@+id/ivHomeLogo"
@@ -156,7 +156,7 @@
                         android:gravity="center_vertical"
                         android:maxLines="1"
                         android:textColor="@color/white"
-                        android:textSize="13sp"
+                        android:textSize="@dimen/textSize14sp"
                         app:layout_constraintEnd_toStartOf="@+id/linSection"
                         app:layout_constraintStart_toEndOf="@+id/ivAwayLogo"
                         app:layout_constraintTop_toTopOf="@+id/ivAwayLogo"
