--- a/app/src/main/res/layout/item_endcard_match.xml
+++ b/app/src/main/res/layout/item_endcard_match.xml
@@ -4,14 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="124dp"
-    android:layout_marginTop="1dp"
-    android:paddingTop="16dp"
     android:paddingLeft="12dp"
     android:background="@color/color_213643">
-    
+    <View
+        android:id="@+id/viewTop"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/margin_0.5"
+        android:layout_marginRight="@dimen/margin_12"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/color_071824" />
     <View
         android:layout_width="0.5dp"
         android:layout_height="50dp"
+        android:layout_marginTop="@dimen/margin_16"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +30,7 @@
         android:id="@+id/ivHomeLogo"
         android:layout_width="28dp"
         android:layout_height="28dp"
+        android:layout_marginTop="16dp"
         android:padding="2dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -36,7 +44,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivHomeLogo"
         android:layout_marginTop="4dp"
-        android:lineSpacingExtra="0dp"
+        android:lineSpacingExtra="3dp"
         android:textStyle="bold"
         android:gravity="center"
         android:textColor="@color/color_FFFFFF"
@@ -50,7 +58,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/tvHomeName"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="4dp"
         android:textColor="#FFD600"
         android:textSize="14sp"
@@ -76,7 +84,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ivHomeLogo"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
-        android:lineSpacingExtra="0dp"
+        android:lineSpacingExtra="3dp"
         android:textStyle="bold"
         android:gravity="center"
         android:textColor="@color/color_FFFFFF"
@@ -90,6 +98,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="@dimen/margin_16"
         android:layout_marginEnd="19dp"
         android:gravity="center_horizontal"
         android:textSize="12sp"
