--- a/app/src/main/res/layout/item_endcard_match.xml
+++ b/app/src/main/res/layout/item_endcard_match.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="124dp"
-    android:paddingLeft="12dp"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:background="@color/color_213643">
     <View
         android:id="@+id/viewTop"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/margin_0.5"
-        android:layout_marginRight="@dimen/margin_12"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:background="@color/color_071824" />
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="124dp"
+    android:paddingTop="16dp"
+    android:paddingLeft="12dp">
     <View
         android:layout_width="0.5dp"
         android:layout_height="50dp"
-        android:layout_marginTop="@dimen/margin_16"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +31,6 @@
         android:id="@+id/ivHomeLogo"
         android:layout_width="28dp"
         android:layout_height="28dp"
-        android:layout_marginTop="16dp"
         android:padding="2dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/tvHomeName"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="4dp"
         android:layout_marginStart="4dp"
         android:textColor="#FFD600"
         android:textSize="14sp"
@@ -98,7 +98,6 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="@dimen/margin_16"
         android:layout_marginEnd="19dp"
         android:gravity="center_horizontal"
         android:textSize="12sp"
@@ -186,3 +185,4 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
