--- a/app/src/main/res/layout/view_vip_activated_empty.xml
+++ b/app/src/main/res/layout/view_vip_activated_empty.xml
@@ -15,6 +15,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_marginHorizontal="@dimen/margin_26"
         android:textColor="@color/color_BEC7DC"
         android:textSize="@dimen/textSize14sp"
