--- a/app/src/main/res/layout/item_home_okgame.xml
+++ b/app/src/main/res/layout/item_home_okgame.xml
@@ -93,8 +93,12 @@
 
 <LinearLayout
     android:id="@+id/linMaintenance"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
     android:orientation="vertical"
     android:gravity="center"
     android:clickable="true"
