withdraw password 翻译优化

--- a/app/src/main/res/layout/activity_setting_password.xml
+++ b/app/src/main/res/layout/activity_setting_password.xml
@@ -19,7 +19,7 @@
         android:layout_marginTop="@dimen/margin_1"
         android:background="@color/color_FFFFFF"
         app:firstTabText="@string/login_password"
-        app:secondTabText="@string/withdraw_password" />
+        app:secondTabText="@string/J475" />
 
 
     <org.cxct.sportlottery.view.scrollview.MyScrollView
