--- a/app/src/main/res/layout/fragment_bet_station.xml
+++ b/app/src/main/res/layout/fragment_bet_station.xml
@@ -176,7 +176,7 @@
                     app:cvInputType="textPassword"
                     app:cvMarginBottom="8dp"
                     app:cvTextColor="@color/color_414655"
-                    app:cvTitle="@string/withdraw_password" />
+                    app:cvTitle="@string/J475" />
 
             </LinearLayout>
 
