--- a/app/src/main/res/layout/activity_vip_benefits.xml
+++ b/app/src/main/res/layout/activity_vip_benefits.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:layout_width="match_parent"
@@ -56,6 +57,7 @@
             android:gravity="center_vertical"
             android:paddingHorizontal="8dp"
             android:paddingVertical="4dp"
+            android:foreground="@drawable/fg_ripple"
             android:text="@string/P362"
             android:textColor="@color/white"
             android:textSize="14sp"
@@ -146,12 +148,20 @@
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/rcvActivatedBenefits"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            tools:itemCount="3"
+                            tools:listitem="@layout/item_activated_benefits"/>
                         <include
                             android:id="@+id/includeActivatedEmpty"
                             layout="@layout/view_vip_activated_empty"
-                            android:visibility="gone"
-                            />
+                            android:visibility="gone" />
+
+                        <View
+                            android:id="@+id/vLoading"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_marginTop="20dp" />
                     </FrameLayout>
 
 
@@ -160,7 +170,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="16dp"
-                        android:layout_marginBottom="12dp"
+                        android:layout_marginBottom="8dp"
                         android:text="@string/P370"
                         android:textColor="@color/color_0D2245"
                         android:textSize="16sp" />
@@ -169,9 +179,12 @@
                         android:id="@+id/rcvUnactivatedBenefits"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="90dp"
-                        android:clipToPadding="false"
-                        android:paddingStart="4dp" />
+                        android:layout_marginHorizontal="@dimen/margin_12"
+                        android:layout_marginBottom="80dp"
+                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                        app:spanCount="3"
+                        tools:itemCount="4"
+                        tools:listitem="@layout/item_unactivated_benefits"/>
 
                 </LinearLayout>
 
@@ -187,6 +200,7 @@
             android:layout_height="50dp"
             android:layout_marginHorizontal="12dp"
             android:layout_marginBottom="12dp"
+            android:foreground="@drawable/fg_ripple"
             app:layout_constraintBottom_toBottomOf="parent">
 
             <TextView
@@ -206,14 +220,6 @@
                 android:src="@drawable/ic_vip_details" />
 
         </FrameLayout>
-
-        <View
-            android:id="@+id/vLoading"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivProfile"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
