--- a/app/src/main/res/layout/item_unactivated_benefits.xml
+++ b/app/src/main/res/layout/item_unactivated_benefits.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="117dp"
-    android:layout_height="100dp"
-    android:layout_marginStart="8dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    tools:layout_width="117dp"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/ivBenefits"
@@ -36,6 +37,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvBenefitsName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="@dimen/margin_10"
         android:maxLines="1"
         android:fontFamily="@font/helvetica_bold"
         android:textSize="16sp"
