--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -649,5 +649,6 @@
     <color name="color_FFA800">#FFA800</color>
     <color name="color_F2F7FE">#F2F7FE</color>
     <color name="color_00C2FF">#00C2FF</color>
+    <color name="color_FAFF00">#FAFF00</color>
 
 </resources>
