--- a/app/src/main/res/layout/item_vip_card.xml
+++ b/app/src/main/res/layout/item_vip_card.xml
@@ -87,6 +87,6 @@
         android:paddingBottom="3dp"
         android:textColor="@color/white"
         android:textSize="14sp"
-        android:text="current"/>
+        android:text="Current"/>
 
 </FrameLayout>
