--- a/app/src/main/res/layout/activity_my_vip_detail.xml
+++ b/app/src/main/res/layout/activity_my_vip_detail.xml
@@ -39,7 +39,7 @@
            android:visibility="visible">
            <LinearLayout
                android:layout_width="wrap_content"
-               android:layout_height="@dimen/margin_32"
+               android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_36">
@@ -47,15 +47,18 @@
                    android:id="@+id/tvAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
+                   android:gravity="center"
                    android:layout_marginRight="@dimen/margin_8"
                    android:textSize="@dimen/textSize18sp"
                    android:textColor="@color/color_FF7676"
+                   android:textStyle="bold"
                    android:text="50"/>
                <TextView
                    android:id="@+id/tvContent"
-                   android:layout_width="wrap_content"
+                   android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
+                   android:lineHeight="16dp"
                    android:textSize="@dimen/textSize14sp"
                    android:textColor="@color/color_0D2245"
                    android:text="@string/P396"/>
