--- a/app/src/main/res/layout/item_unactivated_benefits.xml
+++ b/app/src/main/res/layout/item_unactivated_benefits.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     tools:layout_width="117dp"
+    android:background="@drawable/bg_white_radius_8"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/ivBenefits"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:background="@drawable/bg_circle_f1f4fc"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +25,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="4dp"
-        android:maxLines="1"
+        android:lines="1"
+        android:ellipsize="end"
         android:fontFamily="@font/helvetica_normal"
         android:textSize="11sp"
         android:textColor="@color/color_A7B2C4"
@@ -35,11 +38,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/tvBenefitsName"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="@dimen/margin_10"
-        android:maxLines="1"
-        android:fontFamily="@font/helvetica_bold"
+        android:lines="1"
+        android:fontFamily="@font/inter_bold"
         android:textSize="16sp"
         android:textColor="@color/color_0D2245"
         android:gravity="center_horizontal"
