--- a/app/src/main/res/layout/view_user_vip.xml
+++ b/app/src/main/res/layout/view_user_vip.xml
@@ -50,7 +50,7 @@
                     android:text="vip 0"
                     android:textColor="@color/color_854C00"
                     android:textFontWeight="700"
-                    android:textSize="@dimen/textSize18sp"
+                    android:textSize="@dimen/textSize16sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -63,12 +63,14 @@
                 <org.cxct.sportlottery.ui.profileCenter.vip.view.VipProgressView
                     android:id="@+id/vipProgressView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_5"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
+                    android:layout_marginTop="@dimen/margin_3"
                     android:layout_marginRight="@dimen/margin_8"
                     android:text="@string/P441"
                     android:textColor="@color/color_D48C1A"
@@ -97,7 +99,7 @@
                     android:text="vip 1"
                     android:textColor="@color/color_854C00"
                     android:textFontWeight="700"
-                    android:textSize="@dimen/textSize18sp"
+                    android:textSize="@dimen/textSize16sp"
                     android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
@@ -132,7 +134,6 @@
                 android:layout_weight="1"
                 android:text="@string/P371"
                 android:textColor="@color/color_0D2245"
-                android:textFontWeight="700"
                 android:textSize="@dimen/textSize14sp"
                 android:textStyle="bold" />
 
@@ -185,8 +186,8 @@
                     android:layout_marginTop="@dimen/margin_8"
                     android:gravity="center"
                     android:text="@string/P363"
-                    android:textColor="@color/color_0D2245"
-                    android:textSize="@dimen/textSize12sp"
+                    android:textColor="@color/color_6D7693"
+                    android:textSize="@dimen/textSize10sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/ivBonusPromote" />
@@ -226,8 +227,8 @@
                     android:layout_marginTop="@dimen/margin_8"
                     android:gravity="center"
                     android:text="@string/P365"
-                    android:textColor="@color/color_0D2245"
-                    android:textSize="@dimen/textSize12sp"
+                    android:textColor="@color/color_6D7693"
+                    android:textSize="@dimen/textSize10sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/ivBonusBirthday" />
@@ -267,8 +268,8 @@
                     android:layout_marginTop="@dimen/margin_8"
                     android:gravity="center"
                     android:text="@string/P364"
-                    android:textColor="@color/color_0D2245"
-                    android:textSize="@dimen/textSize12sp"
+                    android:textColor="@color/color_6D7693"
+                    android:textSize="@dimen/textSize10sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/ivBonusWeekly" />
@@ -308,8 +309,8 @@
                     android:layout_marginTop="@dimen/margin_8"
                     android:gravity="center"
                     android:text="@string/P366"
-                    android:textColor="@color/color_0D2245"
-                    android:textSize="@dimen/textSize12sp"
+                    android:textColor="@color/color_6D7693"
+                    android:textSize="@dimen/textSize10sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/ivBonusPacket" />
