--- a/app/src/main/res/layout/item_activated_benefits.xml
+++ b/app/src/main/res/layout/item_activated_benefits.xml
@@ -69,8 +69,8 @@
         android:paddingHorizontal="6dp"
         android:layout_marginLeft="120dp"
         android:layout_marginTop="4dp"
+        android:lines="1"
         android:textSize="10sp"
         android:textColor="@color/color_FFFFFF"
-        android:gravity="center"
-        android:text="claim"/>
+        android:gravity="center"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
