--- a/app/src/main/res/layout/item_vip_card.xml
+++ b/app/src/main/res/layout/item_vip_card.xml
@@ -42,28 +42,30 @@
             android:textSize="12sp"
             android:textColor="@color/color_6D7693"
             tools:text="Ang halaga ng paglago ay binabayaran sa 15:50 araw-araw"/>
-        
+        <org.cxct.sportlottery.ui.profileCenter.vip.view.VipProgressView
+            android:id="@+id/vipProgressView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tvNextLevel"
+            android:layout_marginBottom="32dp"/>
         <TextView
             android:id="@+id/tvNextLevel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/vipProgressView"
+            android:layout_marginTop="@dimen/margin_16"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="27dp"
+            android:lines="1"
             android:fontFamily="@font/helvetica_bold"
             android:textColor="@color/color_0D2245"
             android:textStyle="bold"
             android:textSize="16sp"
-            tools:text="VIP 5"/>
+            tools:text="@string/P439"/>
 
-        <org.cxct.sportlottery.ui.profileCenter.vip.view.VipProgressView
-            android:id="@+id/vipProgressView"
-            android:layout_width="282dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/tvNextLevel"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="5dp"/>
+
 
         <TextView
             android:id="@+id/tvPercent"
