--- a/app/src/main/res/layout/item_activated_benefits.xml
+++ b/app/src/main/res/layout/item_activated_benefits.xml
@@ -52,13 +52,16 @@
         android:text="999,999,900"/>
     <TextView
         android:id="@+id/tvAction"
-        android:layout_width="88dp"
+        android:layout_width="wrap_content"
         android:layout_height="36dp"
+        android:minWidth="88dp"
         app:layout_constraintTop_toTopOf="@+id/ivBenefits"
+        app:layout_constraintBottom_toBottomOf="@id/ivBenefits"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginRight="@dimen/margin_8"
         android:textSize="14sp"
         android:gravity="center"
-        android:text="claim"/>
+        android:text="@string/P375"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <TextView
         android:id="@+id/tvWeeklySurplus"
